com.braintribe.gm/manipulation-parser/src/com/braintribe/model/processing/manipulation/parser/impl/autogenerated/GmmlParser.java
// ============================================================================
// Copyright BRAINTRIBE TECHNOLOGY GMBH, Austria, 2002-2022
// 
// This library is free software; you can redistribute it and/or modify it under the terms of the GNU Lesser General Public
// License as published by the Free Software Foundation; either version 3 of the License, or (at your option) any later version.
// 
// This library is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU Lesser General Public License for more details.
// 
// You should have received a copy of the GNU Lesser General Public License along with this library; See http://www.gnu.org/licenses/.
// ============================================================================
package com.braintribe.model.processing.manipulation.parser.impl.autogenerated;

import java.util.List;

import org.antlr.v4.runtime.NoViableAltException;
import org.antlr.v4.runtime.Parser;
import org.antlr.v4.runtime.ParserRuleContext;
import org.antlr.v4.runtime.RecognitionException;
import org.antlr.v4.runtime.RuntimeMetaData;
import org.antlr.v4.runtime.TokenStream;
import org.antlr.v4.runtime.Vocabulary;
import org.antlr.v4.runtime.VocabularyImpl;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.TerminalNode;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GmmlParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		Boolean=1, Null=2, Colon=3, Colon_Colon=4, EQ=5, PLUS=6, MINUS=7, MINUS_MINUS=8, 
		LB=9, RB=10, LSB=11, RSB=12, LCB=13, RCB=14, COMMA=15, Dot=16, EXCLAMATION=17, 
		StandardIdentifier=18, DateFunction=19, DateOffset=20, TimeZoneOffset=21, 
		DecimalLiteral=22, FloatLiteral=23, DoubleLiteral=24, LongBase10Literal=25, 
		LongBase16Literal=26, IntegerBase10Literal=27, IntegerBase16Literal=28, 
		StringOpen=29, WS=30, Comment=31, LineComment=32, ANY=33, UnicodeEscape=34, 
		EscB=35, EscT=36, EscN=37, EscF=38, EscR=39, EscSQ=40, EscBS=41, PlainContent=42, 
		StringClose=43;
	public static final int
		RULE_blockSequence = 0, RULE_block = 1, RULE_manipulationBlocks = 2, RULE_manipulationBlock = 3, 
		RULE_statement = 4, RULE_variableStatement = 5, RULE_listElement = 6, 
		RULE_setElement = 7, RULE_listValue = 8, RULE_setValue = 9, RULE_mapEntry = 10, 
		RULE_mapValue = 11, RULE_assignableValue = 12, RULE_collectionDeltaValue = 13, 
		RULE_singleDeltaValue = 14, RULE_listDeltaValue = 15, RULE_setDeltaValue = 16, 
		RULE_mapDeltaValue = 17, RULE_manipulation = 18, RULE_propertyManipulation = 19, 
		RULE_propertyOwner = 20, RULE_manipulationOperation = 21, RULE_changeValue = 22, 
		RULE_add = 23, RULE_remove = 24, RULE_clear = 25, RULE_deleteManipulation = 26, 
		RULE_customManipulation = 27, RULE_customInstance = 28, RULE_propertyEntry = 29, 
		RULE_variableAssignment = 30, RULE_variable = 31, RULE_fullyQualifiedIdentifier = 32, 
		RULE_variableValue = 33, RULE_qualifiedType = 34, RULE_value = 35, RULE_variableOrAssignmentValue = 36, 
		RULE_variableAssignmentValue = 37, RULE_enumValue = 38, RULE_literalValue = 39, 
		RULE_dateValue = 40, RULE_calendarOffsetValue = 41, RULE_dateOffset = 42, 
		RULE_timeZoneOffset = 43, RULE_stringValue = 44, RULE_escape = 45, RULE_plainContent = 46, 
		RULE_nullValue = 47, RULE_booleanValue = 48, RULE_decimalValue = 49, RULE_floatValue = 50, 
		RULE_doubleValue = 51, RULE_integerValue = 52, RULE_longValue = 53;
	public static final String[] ruleNames = {
		"blockSequence", "block", "manipulationBlocks", "manipulationBlock", "statement", 
		"variableStatement", "listElement", "setElement", "listValue", "setValue", 
		"mapEntry", "mapValue", "assignableValue", "collectionDeltaValue", "singleDeltaValue", 
		"listDeltaValue", "setDeltaValue", "mapDeltaValue", "manipulation", "propertyManipulation", 
		"propertyOwner", "manipulationOperation", "changeValue", "add", "remove", 
		"clear", "deleteManipulation", "customManipulation", "customInstance", 
		"propertyEntry", "variableAssignment", "variable", "fullyQualifiedIdentifier", 
		"variableValue", "qualifiedType", "value", "variableOrAssignmentValue", 
		"variableAssignmentValue", "enumValue", "literalValue", "dateValue", "calendarOffsetValue", 
		"dateOffset", "timeZoneOffset", "stringValue", "escape", "plainContent", 
		"nullValue", "booleanValue", "decimalValue", "floatValue", "doubleValue", 
		"integerValue", "longValue"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, "'null'", "':'", "'::'", "'='", "'+'", "'-'", "'--'", "'('", 
		"')'", "'['", "']'", "'{'", "'}'", "','", "'.'", "'!'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "Boolean", "Null", "Colon", "Colon_Colon", "EQ", "PLUS", "MINUS", 
		"MINUS_MINUS", "LB", "RB", "LSB", "RSB", "LCB", "RCB", "COMMA", "Dot", 
		"EXCLAMATION", "StandardIdentifier", "DateFunction", "DateOffset", "TimeZoneOffset", 
		"DecimalLiteral", "FloatLiteral", "DoubleLiteral", "LongBase10Literal", 
		"LongBase16Literal", "IntegerBase10Literal", "IntegerBase16Literal", "StringOpen", 
		"WS", "Comment", "LineComment", "ANY", "UnicodeEscape", "EscB", "EscT", 
		"EscN", "EscF", "EscR", "EscSQ", "EscBS", "PlainContent", "StringClose"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "GmmlParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GmmlParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class BlockSequenceContext extends ParserRuleContext {
		public ManipulationBlocksContext manipulationBlocks() {
			return getRuleContext(ManipulationBlocksContext.class,0);
		}
		public TerminalNode EOF() { return getToken(GmmlParser.EOF, 0); }
		public BlockSequenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_blockSequence; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GmmlParserListener ) ((GmmlParserListener)listener).enterBlockSequence(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GmmlParserListener ) ((GmmlParserListener)listener).exitBlockSequence(this);
		}
	}

	public final BlockSequenceContext blockSequence() throws RecognitionException {
		BlockSequenceContext _localctx = new BlockSequenceContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_blockSequence);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			manipulationBlocks();
			setState(109);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(GmmlParser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GmmlParserListener ) ((GmmlParserListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GmmlParserListener ) ((GmmlParserListener)listener).exitBlock(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << MINUS) | (1L << Dot) | (1L << StandardIdentifier))) != 0)) {
				{
				{
				setState(111);
				statement();
				}
				}
				setState(116);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(117);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ManipulationBlocksContext extends ParserRuleContext {
		public List<ManipulationBlockContext> manipulationBlock() {
			return getRuleContexts(ManipulationBlockContext.class);
		}
		public ManipulationBlockContext manipulationBlock(int i) {
			return getRuleContext(ManipulationBlockContext.class,i);
		}
		public ManipulationBlocksContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_manipulationBlocks; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GmmlParserListener ) ((GmmlParserListener)listener).enterManipulationBlocks(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GmmlParserListener ) ((GmmlParserListener)listener).exitManipulationBlocks(this);
		}
	}

	public final ManipulationBlocksContext manipulationBlocks() throws RecognitionException {
		ManipulationBlocksContext _localctx = new ManipulationBlocksContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_manipulationBlocks);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==LCB) {
				{
				{
				setState(119);
				manipulationBlock();
				}
				}
				setState(124);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ManipulationBlockContext extends ParserRuleContext {
		public TerminalNode LCB() { return getToken(GmmlParser.LCB, 0); }
		public TerminalNode RCB() { return getToken(GmmlParser.RCB, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ManipulationBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_manipulationBlock; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GmmlParserListener ) ((GmmlParserListener)listener).enterManipulationBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GmmlParserListener ) ((GmmlParserListener)listener).exitManipulationBlock(this);
		}
	}

	public final ManipulationBlockContext manipulationBlock() throws RecognitionException {
		ManipulationBlockContext _localctx = new ManipulationBlockContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_manipulationBlock);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			match(LCB);
			setState(129);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << MINUS) | (1L << Dot) | (1L << StandardIdentifier))) != 0)) {
				{
				{
				setState(126);
				statement();
				}
				}
				setState(131);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(132);
			match(RCB);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public VariableStatementContext variableStatement() {
			return getRuleContext(VariableStatementContext.class,0);
		}
		public ManipulationContext manipulation() {
			return getRuleContext(ManipulationContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GmmlParserListener ) ((GmmlParserListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GmmlParserListener ) ((GmmlParserListener)listener).exitStatement(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_statement);
		try {
			setState(136);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(134);
				variableStatement();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(135);
				manipulation();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableStatementContext extends ParserRuleContext {
		public VariableAssignmentContext variableAssignment() {
			return getRuleContext(VariableAssignmentContext.class,0);
		}
		public VariableStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GmmlParserListener ) ((GmmlParserListener)listener).enterVariableStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GmmlParserListener ) ((GmmlParserListener)listener).exitVariableStatement(this);
		}
	}

	public final VariableStatementContext variableStatement() throws RecognitionException {
		VariableStatementContext _localctx = new VariableStatementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_variableStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			variableAssignment();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListElementContext extends ParserRuleContext {
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public ListElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listElement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GmmlParserListener ) ((GmmlParserListener)listener).enterListElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GmmlParserListener ) ((GmmlParserListener)listener).exitListElement(this);
		}
	}

	public final ListElementContext listElement() throws RecognitionException {
		ListElementContext _localctx = new ListElementContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_listElement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140);
			value();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SetElementContext extends ParserRuleContext {
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public SetElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_setElement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GmmlParserListener ) ((GmmlParserListener)listener).enterSetElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GmmlParserListener ) ((GmmlParserListener)listener).exitSetElement(this);
		}
	}

	public final SetElementContext setElement() throws RecognitionException {
		SetElementContext _localctx = new SetElementContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_setElement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142);
			value();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListValueContext extends ParserRuleContext {
		public TerminalNode LSB() { return getToken(GmmlParser.LSB, 0); }
		public TerminalNode RSB() { return getToken(GmmlParser.RSB, 0); }
		public List<ListElementContext> listElement() {
			return getRuleContexts(ListElementContext.class);
		}
		public ListElementContext listElement(int i) {
			return getRuleContext(ListElementContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(GmmlParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(GmmlParser.COMMA, i);
		}
		public ListValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listValue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GmmlParserListener ) ((GmmlParserListener)listener).enterListValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GmmlParserListener ) ((GmmlParserListener)listener).exitListValue(this);
		}
	}

	public final ListValueContext listValue() throws RecognitionException {
		ListValueContext _localctx = new ListValueContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_listValue);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144);
			match(LSB);
			setState(153);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Boolean) | (1L << Null) | (1L << LB) | (1L << StandardIdentifier) | (1L << DateFunction) | (1L << DecimalLiteral) | (1L << FloatLiteral) | (1L << DoubleLiteral) | (1L << LongBase10Literal) | (1L << LongBase16Literal) | (1L << IntegerBase10Literal) | (1L << IntegerBase16Literal) | (1L << StringOpen))) != 0)) {
				{
				setState(145);
				listElement();
				setState(150);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(146);
					match(COMMA);
					setState(147);
					listElement();
					}
					}
					setState(152);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(155);
			match(RSB);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SetValueContext extends ParserRuleContext {
		public TerminalNode LB() { return getToken(GmmlParser.LB, 0); }
		public TerminalNode RB() { return getToken(GmmlParser.RB, 0); }
		public List<SetElementContext> setElement() {
			return getRuleContexts(SetElementContext.class);
		}
		public SetElementContext setElement(int i) {
			return getRuleContext(SetElementContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(GmmlParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(GmmlParser.COMMA, i);
		}
		public SetValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_setValue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GmmlParserListener ) ((GmmlParserListener)listener).enterSetValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GmmlParserListener ) ((GmmlParserListener)listener).exitSetValue(this);
		}
	}

	public final SetValueContext setValue() throws RecognitionException {
		SetValueContext _localctx = new SetValueContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_setValue);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(157);
			match(LB);
			setState(166);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Boolean) | (1L << Null) | (1L << LB) | (1L << StandardIdentifier) | (1L << DateFunction) | (1L << DecimalLiteral) | (1L << FloatLiteral) | (1L << DoubleLiteral) | (1L << LongBase10Literal) | (1L << LongBase16Literal) | (1L << IntegerBase10Literal) | (1L << IntegerBase16Literal) | (1L << StringOpen))) != 0)) {
				{
				setState(158);
				setElement();
				setState(163);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(159);
					match(COMMA);
					setState(160);
					setElement();
					}
					}
					setState(165);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(168);
			match(RB);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MapEntryContext extends ParserRuleContext {
		public List<ValueContext> value() {
			return getRuleContexts(ValueContext.class);
		}
		public ValueContext value(int i) {
			return getRuleContext(ValueContext.class,i);
		}
		public TerminalNode Colon() { return getToken(GmmlParser.Colon, 0); }
		public MapEntryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mapEntry; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GmmlParserListener ) ((GmmlParserListener)listener).enterMapEntry(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GmmlParserListener ) ((GmmlParserListener)listener).exitMapEntry(this);
		}
	}

	public final MapEntryContext mapEntry() throws RecognitionException {
		MapEntryContext _localctx = new MapEntryContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_mapEntry);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(170);
			value();
			setState(171);
			match(Colon);
			setState(172);
			value();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MapValueContext extends ParserRuleContext {
		public TerminalNode LCB() { return getToken(GmmlParser.LCB, 0); }
		public TerminalNode RCB() { return getToken(GmmlParser.RCB, 0); }
		public List<MapEntryContext> mapEntry() {
			return getRuleContexts(MapEntryContext.class);
		}
		public MapEntryContext mapEntry(int i) {
			return getRuleContext(MapEntryContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(GmmlParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(GmmlParser.COMMA, i);
		}
		public MapValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mapValue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GmmlParserListener ) ((GmmlParserListener)listener).enterMapValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GmmlParserListener ) ((GmmlParserListener)listener).exitMapValue(this);
		}
	}

	public final MapValueContext mapValue() throws RecognitionException {
		MapValueContext _localctx = new MapValueContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_mapValue);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(174);
			match(LCB);
			setState(183);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Boolean) | (1L << Null) | (1L << LB) | (1L << StandardIdentifier) | (1L << DateFunction) | (1L << DecimalLiteral) | (1L << FloatLiteral) | (1L << DoubleLiteral) | (1L << LongBase10Literal) | (1L << LongBase16Literal) | (1L << IntegerBase10Literal) | (1L << IntegerBase16Literal) | (1L << StringOpen))) != 0)) {
				{
				setState(175);
				mapEntry();
				setState(180);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(176);
					match(COMMA);
					setState(177);
					mapEntry();
					}
					}
					setState(182);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(185);
			match(RCB);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignableValueContext extends ParserRuleContext {
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public ListValueContext listValue() {
			return getRuleContext(ListValueContext.class,0);
		}
		public SetValueContext setValue() {
			return getRuleContext(SetValueContext.class,0);
		}
		public MapValueContext mapValue() {
			return getRuleContext(MapValueContext.class,0);
		}
		public AssignableValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignableValue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GmmlParserListener ) ((GmmlParserListener)listener).enterAssignableValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GmmlParserListener ) ((GmmlParserListener)listener).exitAssignableValue(this);
		}
	}

	public final AssignableValueContext assignableValue() throws RecognitionException {
		AssignableValueContext _localctx = new AssignableValueContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_assignableValue);
		try {
			setState(191);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(187);
				value();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(188);
				listValue();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(189);
				setValue();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(190);
				mapValue();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
